--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="resource-card rounded-lg p-6 flex flex-col">
                 <h2 class="text-2xl font-bold text-white mb-3">O Mundo de Kuar-Tor</h2>
                 <p class="text-gray-400 mb-6 flex-grow">Descubra a história, regras do sistema +2d6, e os segredos da ilha amaldiçoada. Essencial para todos os jogadores.</p>
-                <a href="Site/site.html" class="btn-theme mt-auto block w-full text-center bg-red-700 hover:bg-red-600 text-white font-semibold py-3 rounded-md">Explorar a Campanha</a>
+                <a href="Site/siteV1.1.html" class="btn-theme mt-auto block w-full text-center bg-red-700 hover:bg-red-600 text-white font-semibold py-3 rounded-md">Explorar a Campanha</a>
             </div>
 
             <div class="resource-card rounded-lg p-6 flex flex-col">
