--- a/index.html
+++ b/index.html
@@ -42,6 +42,38 @@
         .btn-theme:hover {
             transform: scale(1.05);
         }
+        /* New styles for the tape */
+        .tape-overlay {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(-5deg); /* Slightly rotate for effect */
+            width: 110%; /* Slightly wider than the button */
+            height: 40px; /* Adjust as needed */
+            pointer-events: none; /* Allows clicks to pass through to the button */
+            z-index: 10; /* Ensure it's above the button */
+        }
+                /* Specific positioning for each tape */
+        .tape-overlay-1 {
+            top: 25%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(-5deg);
+        }
+        .tape-overlay-2 {
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(5deg);
+        }
+        .tape-overlay-3 {
+            top: 75%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(-10deg);
+        }
+        .tape-overlay-4 {
+            top: 90%; /* New tape, slightly lower */
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(2deg);
+        }
     </style>
 </head>
 <body class="flex items-center justify-center min-h-screen p-4">
@@ -70,6 +102,16 @@
                 <h2 class="text-2xl font-bold text-white mb-3">Tomo das Estatísticas</h2>
                 <p class="text-gray-400 mb-6 flex-grow">Utilize este grimório para rolar dados, adicionar valores personalizados e consultar as estatísticas arcanas de seus lançamentos.</p>
                 <a href="Dados/dados.html" class="btn-theme mt-auto block w-full text-center bg-indigo-700 hover:bg-indigo-600 text-white font-semibold py-3 rounded-md">Rolar os Dados</a>
+            </div>
+
+            <div class="resource-card rounded-lg p-6 flex flex-col relative overflow-hidden">
+                <h2 class="text-2xl font-bold text-white mb-3">Manutenção</h2>
+                <p class="text-gray-400 mb-6 flex-grow">Acesse ferramentas e recursos de manutenção para a campanha, incluindo mapas, cofres e arquivos de inteligência.</p>
+                <a href="Rascunhos/manu.html" class="btn-theme mt-auto block w-full text-center bg-emerald-700 hover:bg-emerald-600 text-white font-semibold py-3 rounded-md">Acessar Manutenção</a>
+                <img src="faixa.png" alt="Under Construction Tape" class="tape-overlay tape-overlay-2">
+                <img src="faixa.png" alt="Under Construction Tape" class="tape-overlay tape-overlay-1">
+                <img src="faixa.png" alt="Under Construction Tape" class="tape-overlay tape-overlay-3">
+                <img src="faixa.png" alt="Under Construction Tape" class="tape-overlay tape-overlay-4">
             </div>
 
         </main>
