--- a/login.html
+++ b/login.html
@@ -1,27 +1,84 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Portal da Campanha: Kuar-Tor</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto Slab', serif;
+            background-color: #0a0a0a;
+            color: #d1d5db;
+            background-image: url('https://images.unsplash.com/photo-1597873819455-90031846b6c3?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+        }
+        .main-container {
+            background-color: rgba(10, 10, 10, 0.9);
+            backdrop-filter: blur(8px);
+        }
+        h1, h2 {
+            font-family: 'Cinzel', serif;
+        }
+        .form-container {
+            background-color: rgba(23, 23, 23, 0.7);
+            border: 1px solid #404040;
+            transition: all 0.3s ease;
+        }
+        .form-container:hover {
+            border-color: #ef4444;
+            transform: translateY(-5px);
+            box-shadow: 0 10px 15px -3px rgba(239, 68, 68, 0.1), 0 4px 6px -2px rgba(239, 68, 68, 0.05);
+        }
+        .btn-theme {
+            transition: all 0.2s ease-in-out;
+            font-family: 'Cinzel', serif;
+        }
+        .btn-theme:hover {
+            transform: scale(1.05);
+        }
+        .input-field {
+            background-color: #1f2937;
+            border: 1px solid #4b5563;
+            color: #d1d5db;
+        }
+    </style>
 </head>
-<body>
-    <div class="container">
-        <h1>Login</h1>
-        <form id="login-form">
-            <input type="email" id="login-email" placeholder="Email" required>
-            <input type="password" id="login-password" placeholder="Password" required>
-            <button type="submit">Login</button>
-        </form>
+<body class="flex items-center justify-center min-h-screen p-4">
 
-        <h1>Sign Up</h1>
-        <form id="signup-form">
-            <input type="email" id="signup-email" placeholder="Email" required>
-            <input type="password" id="signup-password" placeholder="Password" required>
-            <button type="submit">Sign Up</button>
-        </form>
+    <div class="main-container w-full max-w-lg p-8 rounded-xl shadow-2xl border border-gray-800">
+        <header class="text-center mb-10">
+            <h1 class="text-5xl font-bold text-red-500" style="text-shadow: 0 0 10px rgba(153, 27, 27, 0.7);">Acesso ao Portal</h1>
+        </header>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+            <div class="form-container p-6 rounded-lg">
+                <h2 class="text-2xl font-bold text-white mb-4 text-center">Login</h2>
+                <form id="login-form">
+                    <input type="email" id="login-email" placeholder="Email" required class="input-field w-full p-2 mb-4 rounded-md">
+                    <input type="password" id="login-password" placeholder="Senha" required class="input-field w-full p-2 mb-4 rounded-md">
+                    <button type="submit" class="btn-theme bg-blue-600 hover:bg-blue-500 text-white font-semibold py-2 px-4 rounded-md w-full">Entrar</button>
+                </form>
+            </div>
+
+            <div class="form-container p-6 rounded-lg">
+                <h2 class="text-2xl font-bold text-white mb-4 text-center">Cadastro</h2>
+                <form id="signup-form">
+                    <input type="email" id="signup-email" placeholder="Email" required class="input-field w-full p-2 mb-4 rounded-md">
+                    <input type="password" id="signup-password" placeholder="Senha" required class="input-field w-full p-2 mb-4 rounded-md">
+                    <button type="submit" class="btn-theme bg-green-600 hover:bg-green-500 text-white font-semibold py-2 px-4 rounded-md w-full">Cadastrar</button>
+                </form>
+            </div>
+        </div>
+
+        <footer class="text-center mt-12">
+            <p class="text-gray-500 text-sm"><a href="main.html" class="hover:text-red-500">Voltar para a página inicial</a></p>
+        </footer>
     </div>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
