terminal_da_aliança

--- a/Rascunhos/terminal da aliança.html
+++ b/Rascunhos/terminal da aliança.html
@@ -154,6 +154,25 @@
                     </div>
                 </section>
 
+                <!-- Nova Seção: MISSÕES ATIVAS -->
+                <section class="terminal-card rounded-lg p-6">
+                    <h2 class="text-2xl font-bold text-red-600 mb-4 border-b border-red-700/30 pb-2 flex items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19V6l12-3v14l-12 3zm0 0l-6-1.5V5.5L9 7M12 4.5l6-1.5m-6 1.5V19m0-14H9m-6 1.5L9 7m-6 0l6-1.5M9 7L3 5.5" /></svg>
+                        MISSÕES ATIVAS
+                    </h2>
+                    <div class="space-y-3">
+                        <a href="#" class="block w-full text-left bg-gray-900 hover:bg-red-800 hover:text-white transition-colors duration-300 p-4 rounded-md font-semibold">
+                            INVASÃO EM PORTIRUS
+                        </a>
+                        <a href="#" class="block w-full text-left bg-gray-900 hover:bg-red-800 hover:text-white transition-colors duration-300 p-4 rounded-md font-semibold">
+                            RECONSTRUÇÃO DA TORRE INFERNAL
+                        </a>
+                        <a href="#" class="block w-full text-left bg-gray-900 hover:bg-red-800 hover:text-white transition-colors duration-300 p-4 rounded-md font-semibold">
+                            EXPLORAÇÃO DA ZONA DE EXCLUSÃO
+                        </a>
+                    </div>
+                </section>
+
                 <!-- Links Rápidos -->
                 <nav class="terminal-card rounded-lg p-6">
                     <h2 class="text-2xl font-bold text-red-600 mb-4 border-b border-red-700/30 pb-2 flex items-center">
