--- a/Rascunhos/terminal da aliança.html
+++ b/Rascunhos/terminal da aliança.html
@@ -123,7 +123,7 @@
     <script>
         // --- All JavaScript is now embedded in this file ---
 
-        // 1. FIREBASE INITIALIZATION (from auth.js)
+        // 1. FIREBASE INITIALIZATION
         const firebaseConfig = {
             apiKey: "AIzaSyC-awoLK4cc0XtLtNppibqgYnNLclUeeI4",
             authDomain: "kuar-tor-portal.firebaseapp.com",
@@ -140,7 +140,7 @@
         const auth = firebase.auth();
         const db = firebase.firestore();
 
-        // 2. TERMINAL LOGIC (from terminal.js)
+        // 2. TERMINAL LOGIC
         document.addEventListener('DOMContentLoaded', () => {
             const loginSection = document.getElementById('login-section');
             const mainContent = document.getElementById('main-content');
@@ -159,34 +159,13 @@
             let selectedMission = null;
             let selectedCharacter = null;
             let currentUser = null;
-            
-            // --- Helper function to add missions if they don't exist ---
-            async function initializeMissions() {
-                const missionNames = ["Portirus", "Chegada em Portirus", "Expedição para Vento Ardente"];
-                const missionsCol = db.collection('missions');
-                
-                const existingMissionsSnapshot = await missionsCol.get();
-                const existingMissionNames = existingMissionsSnapshot.docs.map(doc => doc.data().name);
-
-                for (const name of missionNames) {
-                    if (!existingMissionNames.includes(name)) {
-                        try {
-                            await missionsCol.add({ name: name });
-                            console.log(`Mission "${name}" added to Firestore.`);
-                        } catch (error) {
-                            console.error(`Error adding mission "${name}":`, error);
-                        }
-                    }
-                }
-            }
-
 
             auth.onAuthStateChanged(user => {
                 if (user) {
                     currentUser = user;
                     loginSection.style.display = 'none';
                     mainContent.style.display = 'block';
-                    initializeMissions().then(fetchMissionsAndCharacters);
+                    fetchMissionsAndCharacters(); // Directly fetch data on login
                 } else {
                     currentUser = null;
                     mainContent.style.display = 'none';
@@ -236,7 +215,7 @@
                     renderCharacters();
                 } catch (err) {
                     console.error("Error fetching data: ", err);
-                    loginError.textContent = "Error fetching data from server.";
+                    loginError.textContent = "Error fetching data from server: " + err.message;
                 }
             }
 
